Nick 25 chars, topic 100. Fixed nick and topic strings wrapping

--- a/style/style.css
+++ b/style/style.css
@@ -292,6 +292,7 @@ label.upload_file {
 	font-size: 11px;
 	font-weight: bold;
 	padding: 5px 0px;
+	word-break: break-all;
 }
 
 .navigation .box_path a, .navigation .box_path a:hover, .navigation .box_path a:visited {
@@ -347,6 +348,10 @@ label.upload_file {
 	text-align: center;
 }
 
+.white1 {
+	word-break: break-all;
+}
+
 .themes, .userstable {
 	margin-left: auto;
 	margin-right: auto;
@@ -372,10 +377,12 @@ label.upload_file {
 	width: 100px;
 	border-right: 5px solid #0F3C60;
 	color: #237cad;
+	word-break: break-word;
 }
 
 .themes td.tdw3 {
 	color: #237cad;
+	word-break: break-all;
 }
 
 .themes td.tdw3 a {
